# ccstory

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  README.zh-TW.md  TUTORIAL.md  TUTORIAL.zh-CN.md  TUTORIAL.zh-TW.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: refresh-prices.yml  release.yml  test.yml
ccstory/: __init__.py  artifacts.py  categorizer.py  cli.py  init_categories.py  mcp_server.py  model_prices.json  recap.py  report.py  session_summarizer.py  time_tracking.py  token_usage.py  trends.py
ccstory/providers/: __init__.py  antigravity.py  base.py  claude.py  codex.py
scripts/: refresh_prices.py
skills/recap/: SKILL.md
tests/: conftest.py  test_antigravity_provider.py  test_artifacts.py  test_categorizer.py  test_category_cli.py  test_category_narrative.py  test_claude_p_fallback.py  test_cli_flags.py  test_codex_provider.py  test_comparison_narrative.py  test_cross_window_symmetry.py  test_eta_calibration.py  test_init_modes.py  test_json_output.py  test_layer2_rollup.py  test_litellm_pricing.py  test_mcp_server.py  test_multi_agent_narrative.py  test_multi_agent_summarization.py  test_no_broken_session_flag.py  test_polish.py  test_pricing_config.py  test_recap_entry.py  test_refresh_prices.py  test_report_flavors.py  test_resolver.py  test_resolver_v2.py  test_session_classification.py  test_session_summarizer.py  test_terminal_card.py  test_test_isolation.py  test_time_tracking.py  test_timezone.py  test_token_usage.py
tests/fixtures/jsonl/: malformed_line.jsonl  multi_turn.jsonl
