[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccstory"
version = "0.1.5"
description = "Claude Code usage recap with narrative. ccusage tells you the bill, ccstory tells the story."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "atomchung" }]
keywords = ["claude", "claude-code", "usage", "tracking", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/atomchung/ccstory"
Issues = "https://github.com/atomchung/ccstory/issues"

[project.scripts]
ccstory = "ccstory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ccstory"]
